# schemaforge

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  EXECUTIVE_SUMMARY.md  GOVERNANCE.md  LICENSE  MANIFEST.in  README.md  USE_CASES.md  fix_analysis.md  god_level_schema.sql  god_level_schema_Copy.sql  health_insurance_Copy.sql  postgres_100_schema_Copy.sql  pyproject.toml  repro_100_round2_attempt2_output.txt  repro_100_round2_attempt3_output.txt  repro_100_round2_attempt4_output.txt  repro_100_round2_attempt5_output.txt  repro_100_round2_final_output.txt  repro_100_round2_output.txt  repro_100_round2_strict_output.txt  repro_production.py  requirements.txt  setup.py  sf.py  sf.spec  source_pk.sql  target_pk.sql  test_full_100_output.txt  test_full_100_scenarios.py  test_powershell_scenarios.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: release.yml  test.yml
examples/: ecommerce_v1.sql  ecommerce_v2.sql
examples/analytics_snowflake/: v1.sql  v2.sql
examples/corporate_mssql/: v1.sql  v2.sql
examples/finance_compliance/: v1.sql  v2.sql
examples/healthcare_hipaa/: v1.sql  v2.sql
examples/logistics_oracle/: v1.sql  v2.sql
examples/saas_multitenant/: v1.sql  v2.sql
manual_tests/: gen_db2.sql  gen_mssql.sql  gen_mysql.sql  gen_oracle.sql  gen_postgres.sql  gen_snowflake.sql  gen_sqlite.sql
manual_tests/complex/: migration.sql  rollback.sql  v1.sql  v2.sql  verification.json  verification_drop.sql  verification_postgres.sql
manual_tests/db2/: exhaustive.sql  refinement.json  refinement_v2.json  refinement_v3.json  results.json  results.txt  verification.json  verify_all.json
manual_tests/demo/: legacy_db2.sql  legacy_mssql.sql  legacy_mysql.sql  legacy_oracle.sql  legacy_postgres.sql  legacy_snowflake.sql  legacy_sqlite.sql  modern_db2.sql  modern_mssql.sql  modern_mysql.sql  modern_oracle.sql  modern_postgres.sql  modern_snowflake.sql  modern_sqlite.sql
manual_tests/mssql/: exhaustive.sql  results.json  results.txt  verification.json
manual_tests/mysql/: exhaustive.sql  results.json  results.txt  verification.json
manual_tests/oracle/: exhaustive.sql  refinement.json  refinement_v2.json  refinement_v3.json  results.json  results.txt  verification.json
manual_tests/postgres/: exhaustive.sql  results.json  results.txt  verification.json
manual_tests/refinement/: case_test.json  case_test_v2.json  v1.sql  v2.sql  v2_schema.json
manual_tests/snowflake/: exhaustive.sql  results.json  results.txt
manual_tests/sqlite/: exhaustive.sql  results.json  results.txt  verification.json
schemaforge/: comparator.py  constants.py  exceptions.py  introspector.py  logging_config.py  main.py  models.py
schemaforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
schemaforge/parsers/: db2.py  (+11 more)
tests/: repro_100_scenarios.py  repro_bug_report_dec01.py  repro_constraints.py  repro_master_bug_report.py  repro_quoting.py  repro_regression.py  run_powershell_scenarios.py  test_directory_support.py  test_full_100_scenarios.py  test_introspection_postgres_sql_out.py  test_parser_robustness.py  test_postgres_100_scenarios.py  test_postgres_advanced.py  test_snowflake_advanced.py  test_type_filtering.py
(+115 files in other folders)
